[gd_scene load_steps=5 format=3 uid="uid://cpmt878i3wdqs"]

[ext_resource type="Script" path="res://addons/picky-pixels/ui/texture_editor/texture_editor.gd" id="1_28c4c"]
[ext_resource type="PackedScene" uid="uid://b4gf4ih7xjhw" path="res://addons/picky-pixels/ui/texture_editor/texture_display.tscn" id="2_exxg4"]
[ext_resource type="PackedScene" uid="uid://c3uiy7ykq0yr0" path="res://addons/picky-pixels/ui/color_palette/color_palette.tscn" id="4_b83tm"]
[ext_resource type="PackedScene" uid="uid://bg0bssr8s5nms" path="res://addons/picky-pixels/ui/color_ramps_indicator/color_ramps_indicator.tscn" id="4_kxjmn"]

[node name="TextureEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2
script = ExtResource("1_28c4c")

[node name="Main" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="LightLevelData" type="Control" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureDisplay" parent="Main/LightLevelData" instance=ExtResource("2_exxg4")]
layout_mode = 1
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Main/LightLevelData"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -76.0
grow_horizontal = 0
grow_vertical = 2

[node name="LightLevelsTabs" type="VBoxContainer" parent="Main/LightLevelData/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Config" type="VBoxContainer" parent="Main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LightLevelsConfig" type="HBoxContainer" parent="Main/Config"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/Config/LightLevelsConfig"]
layout_mode = 2
size_flags_horizontal = 3
text = "Light Levels"

[node name="SpinBox" type="SpinBox" parent="Main/Config/LightLevelsConfig"]
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 1.0
rounded = true
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Main/Config"]
layout_mode = 2

[node name="ColorPalette" parent="Main/Config" instance=ExtResource("4_b83tm")]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="HSeparator2" type="HSeparator" parent="Main/Config"]
layout_mode = 2

[node name="ColorRampsIndicator" parent="Main/Config" instance=ExtResource("4_kxjmn")]
layout_mode = 2

[node name="Warning" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "Missing PickyPixelsImageTexture resource. This is likely due to a plugin bug. Try restarting your project."
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Buttons"]
layout_mode = 2
tooltip_text = "Fix issues before saving."
disabled = true
text = "Save"

[node name="Cancel" type="Button" parent="Buttons"]
layout_mode = 2
tooltip_text = "No changes to discard."
disabled = true
text = "Cancel"

[connection signal="load_multiple_textures" from="Main/LightLevelData/TextureDisplay" to="." method="_on_texture_display_load_multiple_textures"]
[connection signal="loaded_texture" from="Main/LightLevelData/TextureDisplay" to="." method="_on_texture_display_loaded_texture"]
[connection signal="value_changed" from="Main/Config/LightLevelsConfig/SpinBox" to="." method="_on_light_levels_value_changed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Buttons/Cancel" to="." method="_on_cancel_pressed"]
